Fix spelling errors

--- a/content/post/time-for-growth.org
+++ b/content/post/time-for-growth.org
@@ -24,14 +24,14 @@ I stumbled upon the previous quote and, while I find it a little harsh, it
 doesn't paint a pretty picture. Am I confining myself to the small enclosure of
 my own comfort zone, forgetting to question it from time to time?
 
-Since I've always made it a point to keep my open mindendness as wide as
+Since I've always made it a point to keep my open mindedness as wide as
 possible, I decided to do something about it in order to improve. The time has
 come to let go of some stiff ideas that get in the way, challenge my beliefs and
 grow up as a person.
 
 ** Conquering the mountain of my ego
 
-A journey of a thousand miles begins with a single step, says ancient chinese
+A journey of a thousand miles begins with a single step, says ancient Chinese
 lore, so I started to take some baby steps in that direction. I found some very
 inspiring insights in the videos by [[https://twitter.com/jaymeedwards][Jayme Edwards]], who shares what he has
 learned over the years as a software developer in order to lead more healthy
