--- a/themes/beautifulhugo/i18n/ja.yaml
+++ b/themes/beautifulhugo/i18n/ja.yaml
@@ -38,6 +38,8 @@
 # Navigation
 - id: toggleNavigation
   translation: "メニューを切り替え"
+- id: languageSwitcherLabel
+  translation: "言語"
 - id: gcseLabelShort
   translation: "検索"
 - id: gcseLabelLong
@@ -47,20 +49,26 @@
 
 # Staticman
 - id: noComment
-  translation: "No comment"
+  translation: "0 件のコメント"
 - id: oneComment
-  translation: "comment"
+  translation: "件のコメント"
 - id: moreComment
-  translation: "comments"
+  translation: "件のコメント"
 - id: useMarkdown
-  translation: "You can use Markdown syntax"
+  translation: "Markdown を使用できます"
 - id: yourName
-  translation: "Your name"
+  translation: "名前"
 - id: yourEmail
-  translation: "Your email address"
+  translation: "メールアドレス"
 - id: yourWebsite
-  translation: "You website"
+  translation: "ウェブサイト"
 
+# Delayed Disqus
+- id: show
+  translation: "ショー"
+- id: comments
+  translation: "コメント" 
 
-
-
+# Related posts
+- id: seeAlso
+  translation: "も参照してください"
